# koyoteugly

./: collect_quotes.py  fetch.py  main.py  pyproject.toml  quotes.json  readme.md  services.py
